Stops images flickering

--- a/OK3/wwwroot/css/custom.css
+++ b/OK3/wwwroot/css/custom.css
@@ -21,6 +21,11 @@ section#top {
     z-index: -1;
 }
 
+img {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0)
+}
+
 .row {
     height: 100%;
 }
